# practice_LangGraph-

./: .gitignore  README.md  docker-compose.yml  langgraph.json  langgraph_borrador.json  pyproject.toml  requirements.txt
notebooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chaining.ipynb  07-structured-output.ipynb  08-prompting.ipynb  09-tools.ipynb  10-conditions.ipynb  11-parallization.ipynb  12-random.ipynb
src/agents/: code_review.py  evaluator.py  main.py  orchestrator.py  rag.py  rag_1.py  react.py  simple.py
src/agents/support/: agent.py  agent_with_check.py  state.py
src/agents/support/nodes/booking/: node.py  prompt.py  tools.py
src/agents/support/nodes/conversation/: node.py  prompt.py  tools.py
src/agents/support/nodes/extractor/: node.py  prompt.py
src/agents/support/routes/intent/: prompt.py  route.py
src/api/: db.py  main.py
